assets/css/style.css
/********************************* Font/Color-Scheme *********************************/

.color-default{
    background-color: #6b705c;
    color: #ffe8d6;
    font-weight: bold;
}

.color-section{
    background-color: #a5a58d;
    color: #ffe8d6;
    opacity: 0.9;
}

a:active, a:link, a:visited {
    color: #ffe8d6;
}

a:hover{
    color: #ddbea9;
}

/********************************* HEADING *********************************/

/*************************** navbar ************************/
.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
    outline: none;
    box-shadow: none;
}

.navbar-toggler:hover{
    color: #ddbea9;
}

/* sample from https://www.w3schools.com/howto/howto_js_navbar_shrink_scroll.asp */

/* Create a sticky/fixed navbar */
#navbar {
  background-color: #6b705c;
  overflow: hidden;
  padding: 1.5rem 0.5rem; /* Large padding which will shrink on scroll (using JS) */
  transition: 1s; /* Adds a transition effect when the padding is decreased */
  opacity: 0.85;
  position: fixed; /* Sticky/fixed navbar */
  width: 100%;
  top: 0; /* At the top */
  z-index: 99;
}

/* Style the navbar links */
#navbar a {
  float: left;
  text-align: center;
  /*padding: 1rem;*/
  text-decoration: none;
  font-size: 1.12rem;
  line-height: 1.56rem;
  border-radius: 0.25rem;
}

#navbar .brand-name {
    font-size: 2rem;
}

#navbar #brand {
  font-size: 2rem;
  font-weight: bold;
  transition: 1s;
  text-align: center;
  margin-left: 5rem;
}

/* Links on mouse-over */
#navbar a:hover {
  background-color: #ddbea9;
  color: #6b705c;
}

#logo-link{
    display: none;
    visibility: hidden;
    transition: 1s;
}

/* Display some links to the right */
#navbar-right {
  float: right;
}

/*************************** @mediaScreen Navbar ************************/

@media screen and (min-width: 750px) {
    #logo-link{
        display: block;
        visibility: visible;
    }

    #navbar #brand {
        text-align: center;
        margin-left: 5rem;
    }
}

/*
@media screen and (max-width: 750px) {
    #logo-link{
        display: none;
        visibility: hidden;
    }
}


@media screen and (max-width: 575px) {
    #brand{
        color: black; /* Remove this color * /
        margin-left: 5rem;
    }
}
 
@media screen and (max-width: 485px) {
    #brand{
        color: black; /* Remove this color * /
        margin-left: 0;
    }
}
*/
/* Add responsiveness - on screens less than 580px wide, display the navbar vertically instead of horizontally */
@media screen and (min-width: 800px) {
  #navbar {
    padding: 1rem 0.5rem !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
  }
  #navbar a {
    /*float: none;
    display: block;*/
    text-align: center;
  }
  #navbar-right {
    float: none;
  }
}

@media screen and (min-width: 446px) {
    .navbar-nav {
        display: flex;
    }
}

/********************************* SECTION *********************************/

.place-selector{
    margin-bottom: 1rem;
    margin-top: 15rem;
    padding-bottom: 1rem;
    padding-top: 1rem;
}

.content {
    margin-bottom: 5rem;
    /*CREDIT - https://www.w3schools.com/css/css_overflow.asp*/
    overflow: scroll;        
}

#player{
    overflow: scroll;
}

#map { 
    /*height: 12.5rem;
    width: 18.75rem; */
    height: 20rem;
    width: 30rem;
    overflow: scroll; 
}

.btn-toggle :focus{
    outline: none;
}
/********************************* FOOTER *********************************/

.footer{
    margin-bottom: 0;
    opacity: 0.9;
    padding: 1rem;
}

.footer div{
    font-weight: normal;
}

